--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body{
     font-family: Helvetica, Arial, sans-serif;
   }
 
-
   header {
     padding: 20px 35px;
     background-color:#39a6b2;
@@ -69,7 +68,7 @@ section {
   padding: 60px;
 }
 
-
+/* hero styles start*/
 .hero {
   background-image: url("../images/hero-bg.jpg");
   height: 600px;
@@ -78,6 +77,7 @@ section {
   position: relative;
 }
 
+/* hero style end */
 
 .hero-form {
   border: 3px solid #024e76;
@@ -94,7 +94,7 @@ section {
   font-size: 24px;
   margin: 0;
 }
-.hero-form p{
+.hero-form p {
   margin: 5px 0 15px 0;
 }
 
@@ -154,7 +154,7 @@ section {
 }
 
 .steps p {
-  color: #39a6b20;
+  color: #39a6b2;
   font-size: 23px;
 }
 
@@ -175,42 +175,7 @@ section {
   border-color: #fce138;
 }
 
-.secondary-border {
-  border-color: #39a6b2;
-}
-.intro h2 {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #fce138;
-  display: inline-block;
-}
-.steps h2 {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;~`      
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #39a6b2;
-}
-.section-title {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
-  border-bottom: 3px solid;
-}
 
-.primary-border {
-  border-color: #fce138;
-}
-
-.secondary-border {
-  border-color: #39a6b2;
-}
 .trainers {
   text-align: center;
 }
@@ -249,6 +214,8 @@ section {
 }
 .text-right {
   text-align: right;
+  /* reach out styles start */
+  
   .contact {
     text-align: center;
     background: #024e76;
@@ -273,7 +240,8 @@ section {
     font-size: 32px;
   }
   
-  .contact-info p, .contact-info address {
+  .contact-info p, 
+  .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
@@ -285,3 +253,40 @@ section {
   }
   
   /* REACH OUT STYLES END */
+
+  .secondary-border {
+    border-color: #39a6b2;
+  }
+  .intro h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #fce138;
+    display: inline-block;
+  }
+  .steps h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;~`      
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #39a6b2;
+  }
+  .section-title {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
+  }
+  
+  .primary-border {
+    border-color: #fce138;
+  }
+  
+  .secondary-border {
+    border-color: #39a6b2;
+  }
